# indoor-climate-data-storage

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: pull-request.yaml
src/: auth.py  main.py  main_fastapi.py  settings.py
src/api/: base_router.py  contracts.py  devices.py  exception_handlers.py  home.py  records.py  routes.py  users.py
src/api/devices/: contracts.py  routes.py
src/api/records/: contracts.py  routes.py
src/api/users/: contracts.py  routes.py
src/auth/: aes.py  auth.py  exceptions.py  tokens.py
src/db/: base_model.py  base_schema.py  connector.py  engine.py  exceptions.py
src/db/migrations/alembic/: env.py  script.py.mako
src/db/migrations/alembic/versions/: .gitkeep  032f8567e10d_.py  04cf7f8d613d_.py  13d47862d7eb_.py  1a17a881184a_.py  1da03a8e88f1_.py  2bce680e4d85_.py  34b34277de9f_.py  3c5318f1a20f_.py  6fe925c73763_.py  8fb5632cb26c_.py  9cb914342651_.py  a86d6fec0597_.py  ce9aaf51c315_.py  d261505ab3d8_.py  e12cbaeffb7c_.py  ecb86789a826_.py  f5e0019c1e98_.py
src/db/models/: activation_request.py  base.py  device.py  record.py  serial_number.py  user.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_devices.py  test_records.py  test_routes.py  test_users.py
src/tests/auth/: conftest.py  test_aes.py  test_token_decoder.py  test_token_encoder.py
src/tests/db/: conftest.py  test_connector.py
